[gd_scene load_steps=44 format=3 uid="uid://bwapqinpvadyh"]

[ext_resource type="Texture2D" uid="uid://b67occ231n1b" path="res://Assets/necromancerBoss/Monsters_Creatures_Fantasy/Mushroom/Attack.png" id="1_ph7ar"]
[ext_resource type="Script" path="res://Scripts/mushroom.gd" id="1_rcjn2"]
[ext_resource type="Texture2D" uid="uid://dgcdfkbvm3aqh" path="res://Assets/necromancerBoss/Monsters_Creatures_Fantasy/Mushroom/Idle.png" id="2_ol61m"]
[ext_resource type="Texture2D" uid="uid://cq3tqxc74unb5" path="res://Assets/necromancerBoss/Monsters_Creatures_Fantasy/Mushroom/Run.png" id="3_5x5iq"]
[ext_resource type="Texture2D" uid="uid://cy87vmhpvrljg" path="res://Assets/necromancerBoss/Monsters_Creatures_Fantasy/Mushroom/Death.png" id="3_xhela"]
[ext_resource type="PackedScene" uid="uid://q6c714l67tcp" path="res://Scenes/killzone.tscn" id="4_omhe4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4iwbl"]
atlas = ExtResource("1_ph7ar")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfdje"]
atlas = ExtResource("1_ph7ar")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b76sb"]
atlas = ExtResource("1_ph7ar")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_akg05"]
atlas = ExtResource("1_ph7ar")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3o3g"]
atlas = ExtResource("1_ph7ar")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_chdm1"]
atlas = ExtResource("1_ph7ar")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjdhf"]
atlas = ExtResource("1_ph7ar")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmncp"]
atlas = ExtResource("1_ph7ar")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrtcg"]
atlas = ExtResource("3_xhela")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbrid"]
atlas = ExtResource("3_xhela")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsndq"]
atlas = ExtResource("3_xhela")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymeuo"]
atlas = ExtResource("3_xhela")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wble"]
atlas = ExtResource("2_ol61m")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_okr8h"]
atlas = ExtResource("2_ol61m")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0f66"]
atlas = ExtResource("2_ol61m")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjrow"]
atlas = ExtResource("2_ol61m")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n846h"]
atlas = ExtResource("3_5x5iq")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx3wl"]
atlas = ExtResource("3_5x5iq")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5f0v"]
atlas = ExtResource("3_5x5iq")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wec6p"]
atlas = ExtResource("3_5x5iq")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrlbg"]
atlas = ExtResource("3_5x5iq")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7cth"]
atlas = ExtResource("3_5x5iq")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqpmy"]
atlas = ExtResource("3_5x5iq")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t4um"]
atlas = ExtResource("3_5x5iq")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_cml0t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iwbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfdje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b76sb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akg05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3o3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chdm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjdhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmncp")
}],
"loop": false,
"name": &"atk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrtcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbrid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsndq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymeuo")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wble")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okr8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0f66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjrow")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n846h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx3wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5f0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wec6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrlbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7cth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqpmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t4um")
}],
"loop": false,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e07ce"]
radius = 24.0
height = 112.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axxme"]
size = Vector2(93.5, 217)

[sub_resource type="CircleShape2D" id="CircleShape2D_tij32"]
radius = 326.671

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkdx8"]
size = Vector2(80, 171.5)

[sub_resource type="Animation" id="Animation_c5p2o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Killzone/CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 171.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Killzone/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-163.985, 21.75)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Killzone:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_34wf8"]
resource_name = "atk_left"
length = 1.14287
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1, 1.14286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Killzone/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.714286, 0.857143, 1.14286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(80, 171.5), Vector2(80, 171), Vector2(176, 99.84), Vector2(80, 171.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Killzone/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.714286, 0.857143, 1.14286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-163.985, 21.75), Vector2(-163.985, 21.75), Vector2(-102.29, 21.75), Vector2(-163.985, 21.75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"atk"]
}

[sub_resource type="Animation" id="Animation_oa1mi"]
resource_name = "atk_right"
length = 1.14287
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1, 1.14286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Killzone/CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.714286, 0.857143, 1.14286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(80, 171.5), Vector2(80, 171), Vector2(176, 99.84), Vector2(80, 171.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Killzone/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.714286, 0.857143, 1.14286),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-163.985, 21.75), Vector2(-163.985, 21.75), Vector2(-102.29, 21.75), Vector2(-163.985, 21.75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"atk"]
}

[sub_resource type="Animation" id="Animation_saqtc"]
resource_name = "death"
length = 1.00003
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Killzone:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}

[sub_resource type="Animation" id="Animation_ofmpv"]
resource_name = "run_left"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="Animation" id="Animation_8ka57"]
resource_name = "run_right"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kanx3"]
_data = {
"RESET": SubResource("Animation_c5p2o"),
"atk_left": SubResource("Animation_34wf8"),
"atk_right": SubResource("Animation_oa1mi"),
"death": SubResource("Animation_saqtc"),
"run_left": SubResource("Animation_ofmpv"),
"run_right": SubResource("Animation_8ka57")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ur4x"]
size = Vector2(72, 20)

[node name="mushroom" type="CharacterBody2D"]
script = ExtResource("1_rcjn2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_cml0t")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 40)
shape = SubResource("CapsuleShape2D_e07ce")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-24, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(28.25, 13.5)
shape = SubResource("RectangleShape2D_axxme")

[node name="atkRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="atkRange"]
shape = SubResource("CircleShape2D_tij32")

[node name="Killzone" parent="." instance=ExtResource("4_omhe4")]
visible = false
position = Vector2(168, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-163.985, 21.75)
shape = SubResource("RectangleShape2D_wkdx8")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kanx3")
}
autoplay = "run_right"

[node name="threshold" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="threshold"]
position = Vector2(4, 56)
shape = SubResource("RectangleShape2D_5ur4x")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="atkRange" to="." method="_on_atk_range_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="threshold" to="." method="_on_threshold_body_entered"]
